# drizzler

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Justfile  README.md  pyproject.toml  urls.txt
.github/workflows/: build-image.yml  release-chart.yaml
deploy/helm/drizzler/: Chart.yaml  values.yaml
deploy/helm/drizzler/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
examples/: download_youtube.py  fetch_with_drizzler.py
src/drizzler/: __init__.py  ascii_render.py  cli.py  core.py  drizzler.py  logging_config.py  metrics.py  models.py  persistence.py  rendering.py  summarizer.py  throttling.py  utils.py
src/drizzler/api/: jobs.py  main.py
tests/: test_histogram_and_timeline.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.jsx  index.css
