[project]
name = "drizzler"
version = "0.2.0"
description = "Adaptive host-aware throttling + YouTube download example via yt-dlp"
readme = "README.md"
keywords = ["crawler", "download", "throttling"]
authors = [
    { name = "Aaron Yoon", email = "yngpil.yoon@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "brotli>=1.1.0",
    "python-dotenv>=1.1.1",
    "yt-dlp>=2025.9.5",
    "rich>=13.0.0",
]

[project.scripts]
drizzler = "drizzler.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "flake8>=7.1.1",
    "pylint>=3.3.3",
    "ruff>=0.9.1",
    "pyright>=1.1.392.post0",
    "pre-commit>=4.2.0",
    "pyupgrade>=3.20.0",
]
llm = [
    "requests>=2.31.0",  # For Ollama API
    "transformers>=4.35.0",  # For local transformers models
    "torch>=2.0.0",  # Required by transformers
]
format = [
    "autopep8>=2.3.2",
    "black>=24.10.0",
    "yapf>=0.43.0",
]
test = [
  "pytest>=8.3.4",
  "pytest-cov>=4.0.0",
]
security = [
  "safety>=3.0.0",
  "bandit>=1.7.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drizzler"]

[tool.ruff]
lint.ignore = ["E731"]  # Allow lambda expressions